change color for textinput cursor and underline

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,7 +2,10 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
+          <item name="colorPrimary">@color/articlecolor</item>
+          <item name="colorPrimaryDark">@color/article_title</item>
+          <!-- sets cursor color -->
+          <item name="colorControlActivated">@color/orange</item>
     </style>
 
 </resources>
